--- a/styles/common.css
+++ b/styles/common.css
@@ -1,8 +1,16 @@
+html, body {
+  height: auto;
+  min-height: 100%;
+  box-sizing: border-box;
+}
+
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  padding-bottom: 70px;
+  min-height: 100vh;
+  padding-bottom: 120px; /* Space for footer */
   box-sizing: border-box;
   background: #1a1a1a;
   color: #fff;
@@ -191,10 +199,17 @@ footer {
   padding: 1rem;
   text-align: center;
   text-shadow: 2px 2px 5px rgba(0,0,255,0.6);
-  width: 100%;
   position: fixed;
   bottom: 0;
   left: 0;
+  width: 100%;
   font-size: 12px;
-  z-index: 1000; /* keeps it above other content */
+  z-index: 1000;
+}
+
+
+.disclaimer {
+    font-size: 15px;
+    margin-top: 5px;
+    width: 95%;
 }
